Add palette debugging

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,160 @@
 body {
   background-color: lightblue;
 }
+
+
+
+/* 
+.color_C0DC47 {
+	backround-color: #C0DC47
+}		
+		
+
+.color_D5DF68 {
+	backround-color: #D5DF68
+}		
+		
+
+.color_E8EADC {
+	backround-color: #E8EADC
+}		
+		
+
+.color_315220 {
+	backround-color: #315220
+}		
+		
+
+.color_819F37 {
+	backround-color: #819F37
+}		
+		
+
+.color_D5B877 {
+	backround-color: #D5B877
+}		
+		
+
+.color_432A29 {
+	backround-color: #432A29
+}		
+		
+
+.color_82231B {
+	backround-color: #82231B
+}		
+		
+
+.color_E27546 {
+	backround-color: #E27546
+}		
+		
+
+.color_AA5335 {
+	backround-color: #AA5335
+}		
+		
+
+.color_C869FA {
+	backround-color: #C869FA
+}		
+		
+
+.color_7F2EF6 {
+	backround-color: #7F2EF6
+}		
+		
+
+.color_2415AB {
+	backround-color: #2415AB
+}		
+		
+
+.color_83CDBE {
+	backround-color: #83CDBE
+}		
+		
+
+.color_5A3529 {
+	backround-color: #5A3529
+}		
+		
+
+.color_B8DBCD {
+	backround-color: #B8DBCD
+}		
+		
+
+.color_212D2B {
+	backround-color: #212D2B
+}		
+		
+
+.color_836A54 {
+	backround-color: #836A54
+}		
+		
+
+.color_74CCE4 {
+	backround-color: #74CCE4
+}		
+		
+
+.color_2095CB {
+	backround-color: #2095CB
+}		
+		
+
+.color_CD1F10 {
+	backround-color: #CD1F10
+}		
+		
+
+.color_051931 {
+	backround-color: #051931
+}		
+		
+
+.color_2D4B76 {
+	backround-color: #2D4B76
+}		
+		
+
+.color_859AD0 {
+	backround-color: #859AD0
+}		
+		
+
+.color_BCB5D7 {
+	backround-color: #BCB5D7
+}		
+		
+
+.color_5272AA {
+	backround-color: #5272AA
+}		
+		
+
+.color_FBEEB1 {
+	backround-color: #FBEEB1
+}		
+		
+
+.color_ECBF74 {
+	backround-color: #ECBF74
+}		
+		
+
+.color_EECB99 {
+	backround-color: #EECB99
+}		
+		
+
+.color_D49D3D {
+	backround-color: #D49D3D
+}		
+		
+
+.color_E2B059 {
+	backround-color: #E2B059
+}		 */
