--- a/public/style.css
+++ b/public/style.css
@@ -1,160 +1,170 @@
-body {
-  background-color: lightblue;
+a,
+a:hover,
+a:link,
+a:visited,
+a:active {
+	color: #fff;
 }
 
+.button {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	width: 48px;
+	height: 48px;
+	background: url('images/baseline-volume_up-24px.svg') no-repeat center center;
+	border: none;
 
+	opacity: 0.6;
 
-/* 
-.color_C0DC47 {
-	backround-color: #C0DC47
-}		
-		
+	z-index:200;
 
-.color_D5DF68 {
-	backround-color: #D5DF68
-}		
-		
+	text-indent: -9999px;
+	overflow: hidden;
+}
 
-.color_E8EADC {
-	backround-color: #E8EADC
-}		
-		
+.muted .muteButton {
+	background-image: url('images/baseline-volume_off-24px.svg');
+}
 
-.color_315220 {
-	backround-color: #315220
-}		
-		
+.loading .muteButton {
+	display: none;
+}
 
-.color_819F37 {
-	backround-color: #819F37
-}		
-		
+body .infoButton {
+	right: inherit;
+	left: 20px;
+	background-image: url('images/baseline-help_outline-24px.svg')
+}
 
-.color_D5B877 {
-	backround-color: #D5B877
-}		
-		
+.overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.8);
+	color: #fff;
 
-.color_432A29 {
-	backround-color: #432A29
-}		
-		
+	z-index:100;
 
-.color_82231B {
-	backround-color: #82231B
-}		
-		
+	transition: all 0.3s ease-in;
+}
 
-.color_E27546 {
-	backround-color: #E27546
-}		
-		
+.overlay.closed {
+	opacity: 0;
+	background: rgba(0,0,0,0.0);
+	/*transform: scaleX(0) scaleY(0) translateY(120vh);*/
+}
 
-.color_AA5335 {
-	backround-color: #AA5335
-}		
-		
+.dialog {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin: -150px 0 0 -120px;
+	width: 240px;
+	height: 300px;
+}
 
-.color_C869FA {
-	backround-color: #C869FA
-}		
-		
+.dialog button {
+	margin-top: 25px;
+	border: solid 1px #fff;
+	width: 100%;
 
-.color_7F2EF6 {
-	backround-color: #7F2EF6
-}		
-		
+	background: #000 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/x8AAwMCAO+ip1sAAAAASUVORK5CYII=) no-repeat 0 0;
+	background-size: 100% 100%;
+	animation: loadingbar 140s;
 
-.color_2415AB {
-	backround-color: #2415AB
-}		
-		
+	transition: background-size 0.3s ease-in;
 
-.color_83CDBE {
-	backround-color: #83CDBE
-}		
-		
+	color: #000;
+	padding: 7px 20px;
+	/* text-transform: uppercase; */
+	font-variant: small-caps;
+}
 
-.color_5A3529 {
-	backround-color: #5A3529
-}		
-		
+.loading .dialog button {
+	color: #999;
+	animation-duration: 140s;
+}
 
-.color_B8DBCD {
-	backround-color: #B8DBCD
-}		
-		
+.loaded .dialog button {
+	animation: none;
+	background-size: 100% 100%;
+}
 
-.color_212D2B {
-	backround-color: #212D2B
-}		
-		
+.loaded .dialog button:hover,
+.loaded .dialog button:active {
+	background: #000;
+	color: #fff;
+}
 
-.color_836A54 {
-	backround-color: #836A54
-}		
-		
+@keyframes loadingbar {
+  0% {
+	background-size: 0% 100%;
+  }
 
-.color_74CCE4 {
-	backround-color: #74CCE4
-}		
-		
+  3% {
+	background-size: 30% 100%;
+  }
 
-.color_2095CB {
-	backround-color: #2095CB
-}		
-		
+  15% {
+	background-size: 50% 100%;
+  }
 
-.color_CD1F10 {
-	backround-color: #CD1F10
-}		
-		
+  50% {
+	background-size: 80% 100%;
+  }
 
-.color_051931 {
-	backround-color: #051931
-}		
-		
+  90% {
+	background-size: 95% 100%;
+  }
 
-.color_2D4B76 {
-	backround-color: #2D4B76
-}		
-		
+  100% {
+	background-size: 97% 100%;
+  }
+}
 
-.color_859AD0 {
-	backround-color: #859AD0
-}		
-		
+/* Cross-fade */
+.crossfade {
+	position: relative;
+}
 
-.color_BCB5D7 {
-	backround-color: #BCB5D7
-}		
-		
+.about .crossfade div {
+	/*transition: all 0.3s ease-in-out;*/
+	animation-name: crossFade;
+	animation-duration: 0.3s;
+	animation-timing-function: ease-in-out;
+}
 
-.color_5272AA {
-	backround-color: #5272AA
-}		
-		
+.info {
+	opacity: 0;
+}
 
-.color_FBEEB1 {
-	backround-color: #FBEEB1
-}		
-		
+.welcome {
+	top: 0;
+	position: absolute;
+	
+	animation-fill-mode: forwards;
+}
 
-.color_ECBF74 {
-	backround-color: #ECBF74
-}		
-		
+html .about .info {
+	z-index: 10;
+	animation-direction: reverse;
+	animation-fill-mode: forwards;
+}
 
-.color_EECB99 {
-	backround-color: #EECB99
-}		
-		
-
-.color_D49D3D {
-	backround-color: #D49D3D
-}		
-		
-
-.color_E2B059 {
-	backround-color: #E2B059
-}		 */
+@keyframes crossFade {
+	0% {
+		opacity: 1;
+		transform: scale(1);
+	}
+	99% {
+		opacity: 0;
+		transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		transform: scale(0);
+	}
+}
