--- a/public/style.css
+++ b/public/style.css
@@ -93,6 +93,24 @@ body .infoButton {
 	background-size: 100% 100%;
 }
 
+.partiallyLoaded .overlay {
+}
+
+.partiallyLoaded .dialog {
+	top: calc(100vh - 5px);
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	margin: auto;
+	left: initial;
+	top: initial;
+}
+
+.partiallyLoaded .dialog button {
+	margin: 0;
+	border: none;
+}
+
 .loaded .dialog button:hover,
 .loaded .dialog button:active {
 	background: #000;
