--- a/public/style.css
+++ b/public/style.css
@@ -93,11 +93,30 @@ body .infoButton {
 	background-size: 100% 100%;
 }
 
-.partiallyLoaded .overlay {
+.secondaryLoading {
+	position: fixed;
+	bottom: 0;
+	height: 5px;
+	width: 100%;
+	display: block;
+	opacity: 0;
+	background: rgba(0,0,0,0.8);
+
+	transition: all 0.5s ease-in;
+	transition-delay: 0.5s;
 }
 
-.partiallyLoaded .dialog {
-	top: calc(100vh - 5px);
+.partiallyLoaded .secondaryLoading {
+	opacity: 0.7;
+}
+
+html .loaded .secondaryLoading {
+	opacity: 0;
+	transition-delay: 0s;
+}
+
+.secondaryLoading .dialog {
+ 	top: calc(100vh - 5px);
 	bottom: 0;
 	width: 100%;
 	height: 100%;
@@ -106,9 +125,10 @@ body .infoButton {
 	top: initial;
 }
 
-.partiallyLoaded .dialog button {
+.secondaryLoading .dialog button {
 	margin: 0;
 	border: none;
+	color: transparent;
 }
 
 .loaded .dialog button:hover,
